--- a/src/feed/Feed.css
+++ b/src/feed/Feed.css
@@ -1,10 +1,14 @@
 .feedContainer {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 .feedView {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
     flex: 1;
+    width: 50%;
 }
