--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,17 @@
   padding: 20px;
   color: white;
 }
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.input {
+    margin: 10px 0;
+    font-size: 1.2rem;
+    padding: 10px;
+    width: calc(100% - 40px);
+    box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+    border: 0;
+}
