--- a/src/feed/Feed.css
+++ b/src/feed/Feed.css
@@ -1,14 +1,20 @@
 .feedContainer {
     display: flex;
     flex-direction: row;
-    max-width: 800px;
-    margin: 0 auto;
+    margin: 0 -10px;
 }
 
 .feedView {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
     flex: 1;
     width: 50%;
+    margin: 0 10px;
+}
+
+.feedView h3 {
+    font-size: 1.5rem;
+}
+
+.feedView ul {
+    list-style-type: none;
+    padding: 0;
 }
