--- a/src/feed/ArticleTile.css
+++ b/src/feed/ArticleTile.css
@@ -92,5 +92,9 @@
 }
 
 .comment {
-    flex-grow: 1;
+    flex: 1;
+    box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+    margin: 10px 10px;
+    position: relative;
+    padding: 10px 10px 30px 10px;
 }
