--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,9 @@
 }
 
 .input {
-    margin: 10px 0;
     font-size: 1.2rem;
     padding: 10px;
-    width: calc(100% - 40px);
+    width: calc(100% - 20px);
     box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     border: 0;
 }
@@ -28,5 +27,5 @@
 
 .profileColumn {
     flex: 1;
-    margin: 10px 0;
+    margin: 10px 10px;
 }
